# IFJ18

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler  dokumentace.docx  dokumentacia.docx  errors.c  errors.h  generate.c  generate.h  if-generate.c  if-generate.h  list.h  main.c  makefile  prectable.c  prectable.h  predict.c  predict.h  queue.c  queue.h  rozdeleni  scanner.c  scanner.h  semantic.c  semantic.h  sematnic.c  sematnic.h  symtable.c  symtable.h  syntax.c  syntax.h  test.php  test.txt
tests/in/: example3.in  expressions.in
tests/src/: a_add.src  a_div.src  a_mul.src  a_mul2.src  a_sub.src  a_sub2.src  aadd2.src  add _div.src  add _sub.src  add _sub2.src  add2.src  add_add2.src  add_div.src  add_div2.src  add_mul.src  add_mul2.src  add_sub.src  add_sub2.src  add_sub_mul_div2.src  addadd.src  adddiv2.src  addmul.src  addsubmuldiv.src  adiv2.src  badSyntax.src  badSyntax2.src  chr.src  chr2.src  chr3.src  chr4.src  chr5.src  chr6.src  chr7.src  div.src  div2.src  exemaple1.src  exemaple2.src  exemaple3.src  expressions.src  expressions10.src  (+87 more)
